{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 103,
  "lineage": "07dbebc8-1788-3ec2-12e3-36ed5b1e3b46",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "access_analyzer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "acm_pca",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream_streaming",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "auto_scaling_plans",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codedeploy",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codedeploy_commands_secure",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "datasync",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ebs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elastic_inference_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk_health",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "emr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "qldb_session",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rds",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ses",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "textract",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "workspaces",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}